--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
       <section class="card">
         <div class="flex">
-          <img src="photo.jpg" alt="Vaibhav" class="profile" onerror="this.src='https://via.placeholder.com/170?text=Photo'" />
+          <img src="vaiimg.jpg" alt="Vaibhav" class="profile" onerror="this.src='https://via.placeholder.com/170?text=Photo'" />
           <div>
             <h2 style="margin:0 0 8px 0">About — Professional Summary</h2>
             <p style="color:var(--muted);margin:0 0 10px 0">I am an Electrical Engineering undergraduate at Sanjivani College with a disciplined, practical approach to engineering and operations. Over four years I independently managed my family's flour mill — handling procurement, production planning, inventory, billing and routine maintenance coordination. This real-world responsibility taught me process discipline, clear documentation and the ability to prioritise under constraints.</p>
@@ -365,3 +365,4 @@
   </script>
 </body>
 </html>
+
