--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
           <p class="info">For professional enquiries, internship opportunities, or collaborations, please use the details below. Ensure you replace the placeholders with your actual information before sharing this publicly.</p>
           <div class="box">
             <ul class="info">
-              <li><strong>Phone (Personal):</strong> +91-XXXXXXXXXX (add your number)</li>
-              <li><strong>Email (Professional):</strong> youremail@example.com (add your email)</li>
+              <li><strong>Phone (Personal):</strong> +91-9511880706</li>
+              <li><strong>Email (Professional):</strong> vaibhav25it@gmail.com (add your email)</li>
               <li><strong>Instagram:</strong> <a href="https://instagram.com/Vaibrod" target="_blank" style="color:var(--accent);">@Vaibrod</a></li>
-              <li>**LinkedIn:** [Add your LinkedIn URL here]</li>
+              <li>**LinkedIn:** https://www.linkedin.com/in/vaibhav-dengale-575338383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app</li>
             </ul>
           </div>
         </div>
@@ -365,4 +365,5 @@
   </script>
 </body>
 </html>
+
 
