--- a/index.html
+++ b/index.html
@@ -219,9 +219,6 @@
         </div>
       `),
 
-      // ----------------------------------------------------------------------
-      // EXPANDED PROJECTS PAGE
-      // ----------------------------------------------------------------------
       projects: pageTemplate('Projects — Vaibhav', `
         <div class="section"><h1>Projects & Practical Work 🛠️</h1><p class="info">A detailed portfolio of projects, focusing on operational efficiency and technical implementation.</p></div>
 
@@ -328,13 +325,13 @@
 
       contact: pageTemplate('Contact — Vaibhav', `
         <div class="section"><h1>Contact Details 📞</h1>
-          <p class="info">For professional enquiries, internship opportunities, or collaborations, please use the details below. Ensure you replace the placeholders with your actual information before sharing this publicly.</p>
+          <p class="info">For professional enquiries, internship opportunities, or collaborations, please use the details below.</p>
           <div class="box">
             <ul class="info">
-              <li><strong>Phone (Personal):</strong> +91-9511880706</li>
-              <li><strong>Email (Professional):</strong> vaibhav25it@gmail.com (add your email)</li>
+              <li><strong>Phone:</strong> +91-9511880706</li>
+              <li><strong>Email:</strong> vaibhav25it@gmail.com </li>
               <li><strong>Instagram:</strong> <a href="https://instagram.com/Vaibrod" target="_blank" style="color:var(--accent);">@Vaibrod</a></li>
-              <li>**LinkedIn:** https://www.linkedin.com/in/vaibhav-dengale-575338383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app</li>
+              <li><strong>LinkedIn:</strong> <a href= "https://www.linkedin.com/in/vaibhav-dengale-575338383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Vaibhav</a></li>
             </ul>
           </div>
         </div>
@@ -365,5 +362,6 @@
   </script>
 </body>
 </html>
+
 
 
